# ctxlink_wifi_esp32_idf

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  partitions.csv
main/: CMakeLists.txt  ctxlink.c  ctxlink_preferences.c  main.c
main/include/: ctxlink.h  ctxlink_preferences.h  custom_assert.h  serial_control.h
main/tasks/: task_client.c  task_monitor.c  task_monitor.h  task_server.c  task_server.h  task_spi_comms.c  task_spi_comms.h  task_wifi.c
